--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <center><h1>Информация обо мне</h1></center>
-<img src="images/dinosaur.jpg">	
+<img src="images/uiui.png">	
 Краткая биография обо мне
 Родился в 1985 году в городе Москва. Закончил в 2008 году МАИ.
 На данный момент работаю ведущим инженером в крупной авиакомпании.
