--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 	squareSize=(windowX-windowX/5)/2;
 	
 	
-	document.write('<style> .testBut { font-size:150pt;  padding-top:0px;width:"50%;height:"50%;padding-left:0px;background-image:url("backgr.png");  background-size:cover;background-repeat:no-repeat;background-position: center center;   }  </style>');
+	document.write('<style> .testBut { font-size:150pt;  padding-top:0px;width:"50%;height:"50%;padding-left:0px;background-image:url("images/backgr.png");  background-size:cover;background-repeat:no-repeat;background-position: center center;   }  </style>');
 	//document.writeln(windowY);
 	
 	document.write('<style> DIV {width: '+windowX+'px;height:'+windowX*0.8+'px;margin: 7px;padding: 10px;}</style>'); 
 	
-	document.write('<div><table border="1" align="center" style="height: 90%; width:90%"><tbody>	');
+	document.write('<div><table border="1" align="center" style="height: 70%; width:70%"><tbody>	');
 	document.write('<tr><td align="center" class="testBut">&nbsp; but1</td>');
 	document.write('<td align="center" class="testBut" >&nbsp;but1</td></tr><tr>');
 	document.write('<td align="center" class="testBut" >&nbsp;but1</td>');
