--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	
 	
 	document.write('<style> .testBut { font-size:150pt;  padding-top:0px;width:"50%;height:"50%;padding-left:0px;background-image:url("images/backgr.png");  background-size:cover;background-repeat:no-repeat;background-position: center center;   }  </style>');
-	//document.writeln(windowY);
+	document.writeln(windowX);
+	document.writeln(windowY);
 	
 	document.write('<style> DIV {width: '+windowX+'px;height:'+windowX*0.8+'px;margin: 7px;padding: 10px;}</style>'); 
 	
