--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     var windowX;
 	var windowY;
 	var squareSize;
-	windowX=screen.width;
-	windowY=screen.height;
+	windowX=screen.height;
+	windowY=screen.width;
 	squareSize=(windowX-windowX/5)/2;
 	
 	
-	document.write('<style> .testBut { font-size:150pt;  padding-top:0px;width:"50%;height:"50%;padding-left:0px;background-image:url("images/backgr.png");  background-size:cover;background-repeat:no-repeat;background-position: center center;   }  </style>');
+	document.write('<style> .testBut { font-size:100pt;  padding-top:0px;width:"50%;height:"50%;padding-left:0px;background-image:url("images/backgr.png");  background-size:cover;background-repeat:no-repeat;background-position: center center;   }  </style>');
 	document.writeln(windowX);
 	document.writeln(windowY);
 	
