--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     var windowX;
 	var windowY;
 	var squareSize;
-	windowX=screen.height;
-	windowY=screen.width;
+	windowY=screen.height;
+	windowX=screen.width;
 	squareSize=(windowX-windowX/5)/2;
 	
 	
