--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 	var squareSize;
 	var or;
 	windowY=screen.height;
-	windowX=0.5*screen.width;
-	 
+	windowX=screen.width;
+	 if (windowY>windowX){windowX=0.8*windowX;}else {windowX=0.8*windowY;}
 	
 	squareSize=(windowX)/2;
 	document.body.style.width = windowX+"px";
