--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 	var or;
 	windowY=screen.height;
 	windowX=screen.width;
+	 document.write(windowX+"/");
+	 document.write (windowY);
 	 if (windowY>windowX){windowX=0.8*windowX;}else {windowX=0.8*windowY;}
 	
 	squareSize=(windowX)/2;
