--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	windowX=screen.width;
 	 document.write(windowX+"/");
 	 document.write (windowY);
-	 if (windowY>windowX){windowX=0.8*windowX;}else {windowX=0.8*windowY;}
+	 windowX=0.6*windowX;
 	
 	squareSize=(windowX)/2;
 	document.body.style.width = windowX+"px";
