--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	var windowY;
 	var squareSize;
 	var or;
+	 screen.orientation.lock ("portrait");
 	windowY=screen.height;
 	windowX=screen.width;
 	 document.write(windowX+"/");
