--- a/index.html
+++ b/index.html
@@ -1,113 +1,27 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html>
- <head>
-  <meta charset="utf-8">
-  <title>Событие onload</title>
-  
- 
-  <script type="text/javascript">
-   function loadPage() {
-    var windowX;
-	var windowY;
-	var squareSize;
-	windowY=screen.height;
-	windowX=screen.width;
-	squareSize=(windowX-windowX/5)/2;
-	
-	
-	document.write('<style> .testBut { font-size:50pt;  padding-top:0px;width:"50%;height:"50%;padding-left:0px;background-image:url("images/backgr.png");  background-size:cover;background-repeat:no-repeat;background-position: center center;   }  </style>');
-	document.writeln(windowX);
-	document.writeln(windowY);
-	
-	document.write('<style> DIV {width: '+windowX+'px;height:'+windowX*0.8+'px;margin: 7px;padding: 10px;}</style>'); 
-	
-	document.write('<div><table border="1" align="center" style="height: 70%; width:70%"><tbody>	');
-	document.write('<tr><td align="center" class="testBut">&nbsp; but1</td>');
-	document.write('<td align="center" class="testBut" >&nbsp;but1</td></tr><tr>');
-	document.write('<td align="center" class="testBut" >&nbsp;but1</td>');
-	document.write('<td align="center" class="testBut">&nbsp;but1</td></tr></tbody></table></div>');
-	document.write("qq");
-	   window.addEventListener("orientationchange", function() {
-    alert("the orientation of the device is now " + screen.orientation.angle);
-});
-	//alert("Image is loaded");
-   }
-  
-   
-  
-  </script>
- <style type="text/css">
-   TABLE {
-    table-layout: fixed; /* Ячейки фиксированной ширины */
-   }
-  </style>
- 
- </head>
- 
-  <body  >
- <script type="text/javascript">
- var windowX;
-	var windowY;
-	var squareSize;
-	var or;
-	 screen.lockOrientation('portrait');
-	windowY=screen.height;
-	windowX=screen.width;
-	 document.write(windowX+"/");
-	 document.write (windowY);
-	 windowX=0.9*windowX;
-	
-	squareSize=(windowX)/2;
-	document.body.style.width = windowX+"px";
-	document.body.style.height = windowX*0.8+"px";
-	//alert("the orientation of the device is now " + screen.orientation.angle);
-	or=0;
-	window.addEventListener("orientationchange", function() {
-    
-});
-	
- </script>
- <style> .testBut { font-size:25pt;  padding-top:10px;
- 
- <script type="text/javascript">
-	
-  document.write("width:"+squareSize+"px;height:"+squareSize+"px;"); 
-
-	
-	</script>
-
- 
- 
- padding-left:10px;background-image:url("images/backgr.png");  background-size:cover;background-repeat:no-repeat;background-position: center center;   }  
-
-  
-  
-  </style>
- 
- 
- 
-  <script type="text/javascript">
-	
-document.write('<table style="height: '+2*squareSize+'px; width:'+2*squareSize+'px;" border="1" align="center">'); 
-
-	
-	</script>
-
- 
- 
- 
- <tbody>
-	<tr><td align="center" class="testBut">&nbsp; but1</td>
-	<td align="center" class="testBut" >&nbsp;but1</td>
-	<script type="text/javascript">
-	
-document.write("</tr><tr>"); 
-	
-	</script>
-	<td align="center" class="testBut" >&nbsp;but1</td>
-	<td align="center" class="testBut">&nbsp;but1</td></tr></tbody></table>
- 
- 
- </body>
- </div>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+	</head>
+	<body>
+		<div data-role="collapsible-set" data-theme="b">
+	<div data-role="collapsible">
+		<h3>Раздел 1</h3>
+		<ul data-role="listview">
+			<li><a href="page1.html">Страница 1</a></li>
+			<li><a href="page2.html">Страница 2</a></li>
+		</ul>
+	</div>
+	<div data-role="collapsible">
+		<h3>Раздел 2</h3>
+		<ul data-role="listview">
+			<li><a href="page3.html">Страница 3</a></li>
+		</ul>
+	</div>
+</div> 
+	</body>
 </html>
