--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@ font-weight:bold;
 </div>
 &nbsp;
 
-<div data-role="content" data-theme="b" id="m2" >
+<div data-role="content" data-theme="b" id="m3" >
 
-<h1 align="center">Больше на</h1>
+<h1 align="center">Миллиметры в сантиметры</h1>
 
-<img class="fig" src="images/m2.png" />
+<img class="fig" src="images/m3.png" />
 
 </div>
 
 &nbsp;
 
-<div data-role="content" data-theme="b" id="m2" >
+<div data-role="content" data-theme="b" id="m4" >
 
-<h1 align="center">Больше на</h1>
+<h1 align="center">Сантиметры в миллиметры</h1>
 
-<img class="fig" src="images/m2.png" />
+<img class="fig" src="images/m4.png" />
 
 </div>
 
@@ -127,6 +127,14 @@ font-weight:bold;
 
 $( "#m2" ).click(function() {
   document.location = "m2.html?0&0";
+});
+
+$( "#m3" ).click(function() {
+  document.location = "m3.html?0&0";
+});
+
+$( "#m4" ).click(function() {
+  document.location = "m4.html?0&0";
 });
 </script>
 			
