--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+		
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
@@ -9,48 +10,11 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         
 		<link rel="stylesheet" href="jquery.mobile-1.4.5.min.css">
+		<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+		
 		<script src="jquery-2.2.4.js"></script>
 		<script src="jquery.mobile-1.4.5.min.js"></script>
         
-		<style>
-  .item {
-  position: relative;
-	width:50%;
-	left:25%;
-	
-	}
-	.blok {
-position:relative;
-width:50%;
-	left:25%;
-padding:1em;
-margin:2em 10px 4em;
-background:#fff;
--webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
--moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
--webkit-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
--moz-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-}
-
-.blok:before,
-.blok:after {
-content:"";
-position:absolute;
-z-index:-2;
-}
-
-.blok p {
-font-size:16px;
-font-weight:bold;
-}
- .fig {
- position: relative;
-    left: 10%; /* Выравнивание по центру */ 
-	width: 80%;
-   } 
-</style>
 		
 		<title>Hello World</title>
     </head>
@@ -58,15 +22,9 @@ font-weight:bold;
  
 
 			
-			<div data-role="content" data-theme="b" id="m1" >
-
-
-			
-			
-			<h1 align="center">Цифры</h1>
-
-<img class="fig" src="images/m1.png" />
-
+<div data-role="content" data-theme="b" >
+<h1 align="center">Цифры</h1>
+<img class="fig" id="m1" src="images/m1.png" />
 </div>
 &nbsp;
 
